# django-static-s3

./: README.md  package.json  setup.cfg
scripts/: static-s3  static-s3-create-bucket  static-s3-create-env  static-s3-upload
