# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-static-s3
version = 2019.8.9
url = https://github.com/andrewp-as-is/django-static-s3
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django static s3

[options]
install_requires =
	awscli
	setuptools
scripts =
	scripts/static-s3
	scripts/static-s3-create-bucket
	scripts/static-s3-create-env
	scripts/static-s3-upload
